style(InputWithLabel): fix box sizing for input of type color to avoid layout shifting on hover

--- a/src/styles/base/InputWithLabel.css
+++ b/src/styles/base/InputWithLabel.css
@@ -55,6 +55,10 @@ input:checked::before {
   align-items: center;
 }
 
+.input-with-label input[type="color"] {
+  box-sizing: content-box;
+}
+
 .input-with-label input::placeholder,
 .input-with-label textarea::placeholder,
 .input-with-label input:disabled,
